--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,6 @@ import { AstroFont } from 'astro-font'
 import { SEO } from 'astro-seo'
 import { ViewTransitions } from 'astro:transitions'
 
-
 interface Props {
   title: string
   description: string
@@ -121,8 +120,8 @@ const url = Astro.url
   </head>
   <body>
     <slot />
-  </body>
-</html>
+  </body></html
+>
 
 <style is:global>
   html {
