--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '$/components/Footer.astro'
 import { AstroFont } from 'astro-font'
 import { SEO } from 'astro-seo'
 import { ViewTransitions } from 'astro:transitions'
@@ -120,8 +121,9 @@ const url = Astro.url
   </head>
   <body>
     <slot />
-  </body></html
->
+    <Footer />
+  </body>
+</html>
 
 <style is:global>
   html {
