--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,7 @@ import { Github } from 'lucide-astro'
       </a>
     </p>
     <a
-      href="https://github.com/marcosraimondi1/git-command"
+      href="https://github.com/Max29xD/git-command"
       target="_blank"
       rel="noopener noreferrer"
       class="flex items-center gap-x-2 rounded-full bg-violet-400/10 px-4 py-2 text-violet-300 transition-colors hover:bg-violet-400/20"
