Add `overflow-x-hidden` to `body` styles in Layout.astro.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -130,6 +130,6 @@ const url = Astro.url
     @apply bg-silver-800 text-silver-50;
   }
   body {
-    @apply h-full min-h-dvh w-screen;
+    @apply h-full min-h-dvh w-screen overflow-x-hidden;
   }
 </style>
