"Update alt text for banner image in Layout.astro"

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -59,7 +59,7 @@ const url = Astro.url
           width: 225,
           height: 167,
           secureUrl: `${url}banner.webp`,
-          alt: `banner de ${title.split(' | ')[0]}`
+          alt: 'banner de comandos de git'
         },
         basic: {
           title: title,
@@ -74,7 +74,7 @@ const url = Astro.url
         description: description,
         site: `${url}`,
         card: 'summary_large_image',
-        imageAlt: `banner de ${title.split(' | ')[0]}`
+        imageAlt: 'banner de comandos de git'
       }}
       extend={{
         link: [{ rel: 'icon', href: '/favicon.svg' }],
