"Update theme-color and msapplication-navbutton-color meta tags to use hsl(259,89%,66%) instead of #cc0000"

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -103,8 +103,8 @@ const url = Astro.url
           },
           { httpEquiv: 'cache-control', content: 'no-cache' },
           { httpEquiv: 'expires', content: '180' },
-          { name: 'theme-color', content: '#cc0000' },
-          { name: 'msapplication-navbutton-color', content: '#cc0000' }
+          { name: 'theme-color', content: 'hsl(259,89%,66%)' },
+          { name: 'msapplication-navbutton-color', content: 'hsl(259,89%,66%)' }
         ]
       }}
     />
