"Refactor CommandCard and command page components, update styles and add transitions"

--- a/src/components/CommandCard.astro
+++ b/src/components/CommandCard.astro
@@ -15,14 +15,19 @@ const { command, description, category, ...props } = Astro.props
   {...props}
 >
   <div
-    class="absolute inset-px grid h-[calc(100%-2px)] w-[calc(100%-2px)] gap-y-2 rounded-[inherit] bg-gradient-to-r md:from-silver-700/90 from-silver-700 md:to-silver-600/90 to-silver-600 p-4 backdrop-blur-none md:backdrop-blur-3xl"
+    class="absolute inset-px grid h-[calc(100%-2px)] w-[calc(100%-2px)] gap-y-2 rounded-[inherit] bg-gradient-to-r from-silver-700 to-silver-600 p-4 backdrop-blur-none md:from-silver-700/90 md:to-silver-600/90 md:backdrop-blur-3xl"
   >
     <code
       class="block font-mono text-lg text-violet-300"
-      view-transitions-name={command}
+      transition:name={command}
       >{command}</code
     >
-    <p class="text-sm leading-relaxed text-silver-50">{description}</p>
+    <p
+      class="text-sm leading-relaxed text-silver-50"
+      transition:name={description}
+    >
+      {description}
+    </p>
     <span
       class="flex -translate-x-2 items-center gap-x-1 text-sm text-violet-300 opacity-0 transition-all duration-300 group-hover:translate-x-0 group-hover:opacity-100"
     >
