--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ import { Github } from 'lucide-astro'
         href="https://maxcoding.pro"
         target="_blank"
         rel="noopener noreferrer"
-        class="font-medium text-violet-300 hover:text-violet-400 transition-colors"
+        class="font-medium text-violet-300 transition-colors hover:text-violet-400"
       >
         Maxcoding
       </a>
