--- a/src/components/buttons/ClipboardCopy.astro
+++ b/src/components/buttons/ClipboardCopy.astro
@@ -10,7 +10,7 @@ const { dataCopy }: Props = Astro.props
 ---
 
 <button
-  class="cursor-pointer rounded-full bg-violet-300/10 p-2.5 text-silver-100 transition-[transform,background-color] duration-300 hover:scale-110 hover:bg-violet-300/20"
+  class="text-silver-100 cursor-pointer rounded-full bg-violet-300/10 p-2.5 transition-[transform,background-color] duration-300 hover:scale-110 hover:bg-violet-300/20"
   id="copy-usage"
   data-copy={dataCopy}
   aria-label="Copiar al portapapeles"
