--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ const filteredCommands = commandFiles.filter(
       </span>
     </h1>
     <p
-      class="animate-gradient ~text-xl/2xl mb-12 bg-[linear-gradient(90deg,hsl(259,89%,66%),hsl(0,0%,98%),hsl(259,89%,66%))] bg-[length:200%_auto] bg-clip-text text-center text-transparent"
+      class="animate-gradient mb-12 bg-[linear-gradient(90deg,hsl(259,89%,66%),hsl(0,0%,98%),hsl(259,89%,66%))] bg-[length:200%_auto] bg-clip-text text-center text-xl text-transparent"
     >
       Una guía interactiva de los comandos más útiles de Git
     </p>
