--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ const filteredCommands = commandFiles.filter(
         ))
       }
     </div>
-    <div class="grid-auto-fit-md grid gap-4">
+    <div class="grid-auto-fit-lg grid gap-4">
       {
         filteredCommands.map(
           ({ slug, data: { command, description, category, difficulty } }) => (
